manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stl-garv-ingress
  namespace: stlgarvdevnamespace
  labels:
    app: stl-garv-ingress
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-030e73801514b869c,subnet-0aea42ed9228d4ff0
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

    # ssl
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:817555535470:certificate/51a3fa44-70ed-4d7d-a54e-3d5d48f40a01

    # waf
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:817555535470:regional/webacl/STL_GARV_DEV_WAF/700bdaa3-a785-4acf-bddd-9d6bda105bc5

    # ssl redirect
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.redirect-to-home: >
      {"type":"redirect","redirectConfig":{"host":"appseksdev.stlgarv.com","path":"/stlgarv/","port":"443","protocol":"HTTPS","statusCode":"HTTP_302"}}
    
spec:
  rules:
  - host: appseksdev.stlgarv.com
    http:
      paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: stl-garv-health-service
              port: 
                number: 80
        - path: /user
          pathType: Prefix
          backend:
            service:
              name: stl-garv-user-service
              port: 
                number: 80
        - path: /ecomm
          pathType: Prefix
          backend:
            service:
              name: stl-garv-ecomm-service
              port: 
                number: 80
        - path: /entertain
          pathType: Prefix
          backend:
            service:
              name: stl-garv-entertain-service
              port: 
                number: 80
        - path: /stlgarv
          pathType: Prefix
          backend:
            service:
              name: stl-garv-frontend-service
              port: 
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: redirect-to-home
              port: 
                name: use-annotation
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ssl-redirect
              port: 
                name: use-annotation
